--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    appdirs>=1.4.3
+    appdirs>=1.4.3,<2
     six>=1.12.0,<2
     distlib>=0.3.0,<1;sys.platform == 'win32'
     importlib-metadata>=0.12,<2;python_version<"3.8"
@@ -83,9 +83,11 @@ docs =
     towncrier >= 18.5.0
     sphinx_rtd_theme >= 0.4.2, < 1
 testing =
+    packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
     coverage >= 4.5.1, <6
     pytest-mock >= 1.12.1, <2
+    pytest-env >= 0.6.2, <1
     xonsh >= 0.9.13, <1; python_version > '3.4'
 
 [options.package_data]
@@ -113,5 +115,9 @@ markers =
     fish
     pwsh
     xonsh
+    slow
 junit_family = xunit2
 addopts = --tb=auto -ra --showlocals
+env =
+    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    PYTHONIOENCODING=utf-8
