--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands =
     coverage run\
     -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    tests {posargs}
+    tests {posargs:--int}
 
     coverage combine
     coverage report
@@ -144,3 +144,12 @@ deps =
 changedir = {toxinidir}/tasks
 commands =
     python release.py --version {posargs}
+
+[testenv:zipapp]
+description = generate a zipapp
+skip_install = true
+deps =
+    {[testenv]deps}
+    packaging >= 20.0.0
+commands =
+    python tasks/make_zipapp.py
