--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,8 @@ jobs:
         image: [linux, windows, macOs]
       fix_lint:
         image: [linux, windows]
+      zipapp:
+        image: [linux, windows]
       docs:
         image: [linux, windows]
       package_readme:
