--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,13 @@ repos:
         args: [--safe]
         language_version: python3.8
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.3.0
+    rev: v1.4.0
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==19.3b0]
         language_version: python3.8
 -   repo: https://github.com/asottile/seed-isort-config
-    rev: v1.9.3
+    rev: v1.9.4
     hooks:
     -   id: seed-isort-config
         args: [--application-directories, '.:src']
@@ -30,14 +30,23 @@ repos:
     -   id: check-merge-conflict
     -   id: trailing-whitespace
     -   id: check-docstring-first
+    -   id: check-ast
+    -   id: check-docstring-first
+    -   id: check-toml
+    -   id: check-toml
     -   id: flake8
-        additional_dependencies: ["flake8-bugbear == 19.8.0"]
+        additional_dependencies: ["flake8-bugbear == 20.1.2"]
         language_version: python3.8
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v1.25.1
+    rev: v1.26.0
     hooks:
     -   id: pyupgrade
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.4.2
+    rev: v1.4.4
     hooks:
     -   id: rst-backticks
+-   repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.6.0
+    hooks:
+    -   id: setup-cfg-fmt
+        args: [--min-py3-version, "3.4"]
