--- a/tox.ini
+++ b/tox.ini
@@ -114,7 +114,7 @@ force_grid_wrap = 0
 line_length = 120
 known_standard_library = ConfigParser
 known_first_party = virtualenv
-known_third_party = _subprocess,appdirs,coverage,git,packaging,pytest,setuptools,six
+known_third_party = _subprocess,appdirs,coverage,filelock,git,packaging,pytest,setuptools,six
 
 [flake8]
 max-complexity = 22
