--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
     appdirs>=1.4.3,<2
     filelock>=3.0.0,<4
     six>=1.12.0,<2
+    contextlib2>=0.6.0,<1;python_version<"3.3"
     distlib>=0.3.0,<1;sys.platform == 'win32'
     importlib-metadata>=0.12,<2;python_version<"3.8"
     importlib-resources>=1.0,<2;python_version<"3.7"
@@ -89,6 +90,7 @@ testing =
     coverage >= 4.5.1, <6
     pytest-mock >= 2.0.0, <3
     pytest-env >= 0.6.2, <1
+    pytest-timeout >= 1.3.4, <2
     xonsh >= 0.9.13, <1; python_version > '3.4'
 
 [options.package_data]
@@ -110,6 +112,7 @@ formats = gztar
 universal = true
 
 [tool:pytest]
+timeout = 10
 markers =
     bash
     csh
