add proselint call to documentation generation
Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,6 +86,7 @@ docs =
     sphinx-argparse >= 0.2.5, <1
     sphinx-rtd-theme >= 0.4.3, <1
     towncrier >= 19.9.0rc1
+    proselint >= 0.10.2, <1
 testing =
     packaging>=20.0;python_version>"3.4"
     pytest >= 4.0.0, <6
