--- a/setup.cfg
+++ b/setup.cfg
@@ -41,10 +41,10 @@ project_urls =
 packages = find:
 install_requires =
     appdirs>=1.4.3,<2
+    distlib>=0.3.0,<1
     filelock>=3.0.0,<4
     six>=1.12.0,<2
     contextlib2>=0.6.0,<1;python_version<"3.3"
-    distlib>=0.3.0,<1;sys.platform == 'win32'
     importlib-metadata>=0.12,<2;python_version<"3.8"
     importlib-resources>=1.0,<2;python_version<"3.7"
     pathlib2>=2.3.3,<3;python_version < '3.4' and sys.platform != 'win32'
