Lower min version of six required
This change should allow installation of virtualenv on systems
with older six where their LTS support may prevent them from
upgrading it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
     appdirs>=1.4.3,<2
     distlib>=0.3.0,<1
     filelock>=3.0.0,<4
-    six>=1.12.0,<2
+    six>=1.9.0,<2   # keep it >=1.9.0 as it may cause problems on LTS platforms
     contextlib2>=0.6.0,<1;python_version<"3.3"
     importlib-metadata>=0.12,<2;python_version<"3.8"
     importlib-resources>=1.0,<2;python_version<"3.7"
