--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,9 @@
 [tox]
 minversion = 3.14.0
 envlist =
-    fix_lint,
-    py38,
-    py37,
-    py36,
-    py35,
-    py34,
-    py27,
-    pypy,
-    pypy3,
+    fix-lint,
+    py{38,37,36,35,34,27},
+    py{38,37,36,35,34,27}-lower,
     coverage,
     readme,
     docs,
@@ -24,8 +18,10 @@ setenv =
     COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
-    PYTHONIOENCODING=utf-8
-    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    PYTHONIOENCODING = utf-8
+    PYTHONWARNINGS = ignore:DEPRECATION::pip._internal.cli.base_command
+    py{38,37,36,35,34,27}-lower: PIP_CONSTRAINT = {toxinidir}/pip-constraint.txt
+
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
@@ -99,7 +95,7 @@ passenv = UPGRADE_ADVISORY
 changedir = {toxinidir}/tasks
 commands = python upgrade_wheels.py
 
-[testenv:fix_lint]
+[testenv:fix-lint]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 basepython = python3.8
 passenv = *
