Add packaging environment
Adds a packaging environment and documents its use. This should clarify how
to build and install and unreleased version.

Related: #1609

--- a/tox.ini
+++ b/tox.ini
@@ -161,3 +161,23 @@ deps =
     packaging >= 20.0.0
 commands =
     python tasks/make_zipapp.py
+
+[testenv:packaging]
+description =
+    Do packagin/distribution, leaving artifacts indist dist/ folder.
+usedevelop = false
+skip_install = true
+deps =
+    pep517 >= 0.8.1
+    twine >= 3.1.1
+setenv =
+commands =
+    rm -rfv {toxinidir}/dist/
+    python -m pep517.build \
+      --source \
+      --binary \
+      --out-dir {toxinidir}/dist/ \
+      {toxinidir}
+    python -m twine check .tox/dist/*
+whitelist_externals =
+    rm
