--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,9 @@
 requires = [
     "setuptools >= 41.0.0",
     "wheel >= 0.30.0",
-    "setuptools_scm[toml]>=3.4",
+    "setuptools_scm >= 2",
 ]
 build-backend = 'setuptools.build_meta'
-
-[tool.setuptools_scm]
-write_to = "src/virtualenv/version.py"
-write_to_template = """
-\"\"\" Version information \"\"\"
-__version__ = "{version}"
-"""
 
 [tool.black]
 line-length = 120
