--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ setenv =
     COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
     _COVERAGE_SRC = {envsitepackagesdir}/virtualenv
     PYTHONIOENCODING=utf-8
-    {py27, pypy}:PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    {py34,py27,pypy}: PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
 passenv = https_proxy http_proxy no_proxy HOME PYTEST_* PIP_* CI_RUN TERM
 extras = testing
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
