Run tests in randome order
To flush out tests with side-effects that break other tests.

Signed-off-by: Bernat Gabor <bgabor8@bloomberg.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,7 @@ testing =
     pytest-xdist >= 1.31.0
     pytest-mock >= 2
     pytest-env >= 0.6.2
+    pytest-randomly >= 1
     xonsh >= 0.9.16; python_version > '3.4'
 
 [options.package_data]
