--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands =
     coverage erase
     coverage run -m pytest \
     --junitxml {toxworkdir}/junit.{envname}.xml \
-    tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:0}}
+    tests {posargs:--int --timeout 600 -n {env:PYTEST_XDIST:0} -k test_batch}
 
     coverage combine
     coverage report
