--- a/setup.cfg
+++ b/setup.cfg
@@ -88,7 +88,6 @@ docs =
     sphinx-rtd-theme>=0.4.3
     towncrier>=19.9.0rc1
 testing =
-    coverage>=4
     coverage_enable_subprocess>=1
     flaky>=3
     pytest>=4
@@ -98,6 +97,8 @@ testing =
     pytest-randomly>=1
     pytest-timeout>=1
     pytest-xdist>=1.31.0
+    coverage>=4;python_version=="3.4"
+    coverage[toml]>=5;python_version!="3.4"
     packaging>=20.0;python_version>"3.4"
     xonsh>=0.9.16;python_version > '3.4' and python_version != '3.9'
 
