--- a/tox.ini
+++ b/tox.ini
@@ -44,9 +44,7 @@ commands =
   python -m coverage combine
   python -m coverage report --skip-covered --show-missing
   python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
-  python -m coverage html -d {envtmpdir}/htmlcov \
-    !py34: --show-contexts \
-    --title virtualenv-{envname}-coverage
+  python -m coverage html -d {envtmpdir}/htmlcov --title virtualenv-{envname}-coverage
 install_command = python -m pip install {opts} {packages} --disable-pip-version-check
 
 [testenv:fix_lint]
