--- a/codecov.yaml
+++ b/codecov.yaml
@@ -2,12 +2,20 @@ codecov:
   require_ci_to_pass: yes
   wait_for_ci: yes
 
-coverage:
-  precision: 2
-  round: down
-  range: "80...100"
+comment: no # do not comment PR with the result
 
-comment: false
+coverage:
+  precision: 3
+  round: down
+  range: 80..90
+  status:
+    project:
+      enabled: yes
+      target: auto
+      threshold: 3%
+    # do not run coverage on patch nor changes
+    patch: no
+    changes: no
 
 ignore:
   - "src/virtualenv/create/via_global_ref/builtin/python2/site.py"
