--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,7 +24,7 @@ jobs:
           - windows
           - macos
         py:
-          - 3.9.0-rc.2
+          - 3.9
           - 3.8
           - 3.7
           - 3.6
@@ -50,7 +50,7 @@ jobs:
       - name: Setup python for tox
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9.0-rc.2
+          python-version: 3.9
       - name: Install tox
         run: python -m pip install tox
       - uses: actions/checkout@v2
@@ -112,10 +112,10 @@ jobs:
           - { os: windows, tox_env: docs }
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Python 3.9.0-rc.2
+      - name: Setup Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9.0-rc.2
+          python-version: 3.9
       - name: Install tox
         run: python -m pip install tox
       - name: Run check for ${{ matrix.tox_env }}
@@ -131,7 +131,7 @@ jobs:
       - name: Setup python to build package
         uses: actions/setup-python@v2
         with:
-          python-version: 3.9.0-rc.2
+          python-version: 3.9
       - name: Install https://pypi.org/project/build
         run: python -m pip install build
       - uses: actions/checkout@v2
