--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,10 +27,12 @@ jobs:
           - pypy-3.8-v7.3.7
         os:
           - ubuntu-20.04
-          - macos-10.15
+          - macos-12
           - windows-2022
         include:
-          - { os: macos-10.15, py: brew@py3 }
+          - { os: macos-12, py: "brew@3.8" }
+          - { os: macos-12, py: "brew@3.9" }
+          - { os: macos-12, py: "brew@3.10" }
     steps:
       - name: Install OS dependencies
         run: |
@@ -43,7 +45,7 @@ jobs:
             ${{ runner.os == 'Linux' && 'tar -zxf nushell.tar.gz' || true }} && \
             ${{ runner.os == 'Linux' && 'sudo cp nu /usr/bin' || true }} && \
             ${{ runner.os == 'Windows' && 'choco install nushell' || true }} && \
-            ${{ runner.os == 'macOS' && 'brew update && brew install fish tcsh nushell' || true }} && \
+            ${{ runner.os == 'macOS' && 'brew install fish tcsh nushell' || true }} && \
             exit 0 || true;
           done
           exit 1
@@ -52,40 +54,38 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install tox
-        run: python -m pip install tox
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Use local virtualenv for tox
-        run: python -m pip install .
       - name: Install Python 2 for cross test
         uses: actions/setup-python@v4
         with:
           python-version: "2.7"
+      - name: Setup brew python for test ${{ matrix.py }}
+        if: startsWith(matrix.py,'brew@')
+        run: |
+          set -e
+          PY=$(echo '${{ matrix.py }}' | cut -c 6-)
+          brew upgrade python@$PY || brew install python@$PY
+          echo "/usr/local/opt/python@$PY/libexec/bin" >>"${GITHUB_PATH}"
+        shell: bash
       - name: Setup python for test ${{ matrix.py }}
-        if: "!( startsWith(matrix.py,'brew@py') || endsWith(matrix.py, '-dev') )"
+        if: "!( startsWith(matrix.py,'brew@') || endsWith(matrix.py, '-dev') )"
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py }}
-      - name: Setup brew python for test ${{ matrix.py }}
-        if: startsWith(matrix.py,'brew@py')
-        run: |
-          import subprocess; import codecs; import os
-          subprocess.check_call(["bash", "-c", "brew upgrade python@3 || brew install python@3"])
-          with codecs.open(os.environ["GITHUB_PATH"], "a", "utf-8") as file_handler:
-               file_handler.write("/usr/local/opt/python@3/bin")
-        shell: python
       - name: Pick environment to run
         run: |
-          import platform; import os; import sys; import codecs
-          cpy = platform.python_implementation() == "CPython"
-          base =("{}{}{}" if cpy else "{}{}").format("py" if cpy else "pypy", *sys.version_info[0:2])
-          env = "TOXENV={}\n".format(base)
-          print("Picked:\n{}for{}".format(env, sys.version))
-          with codecs.open(os.environ["GITHUB_ENV"], "a", "utf-8") as file_handler:
-               file_handler.write(env)
+          import os;  import platform; import sys; from pathlib import Path
+          env = f'TOXENV=py{"" if platform.python_implementation() == "CPython" else "py"}3{sys.version_info.minor}'
+          print(f"Picked: {env} for {sys.version} based of {sys.executable}")
+          with Path(os.environ["GITHUB_ENV"]).open("ta") as file_handler:
+              file_handler.write(env)
         shell: python
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install tox
+        run: python -m pip install tox
+      - name: Use local virtualenv for tox
+        run: python -m pip install .
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
@@ -95,7 +95,9 @@ jobs:
           CI_RUN: "yes"
           DIFF_AGAINST: HEAD
       - name: Rename coverage report file
-        run: import os; import sys; os.rename(".tox/.coverage.{}".format(os.environ['TOXENV']), ".tox/.coverage.{}-{}".format(os.environ['TOXENV'], sys.platform))
+        run: |
+          import os; import sys 
+          os.rename(f".tox/.coverage.{os.environ['TOXENV']}", f".tox/.coverage.{os.environ['TOXENV']}-{sys.platform}")
         shell: python
       - name: Upload coverage data
         uses: actions/upload-artifact@v3
@@ -105,7 +107,7 @@ jobs:
 
   coverage:
     name: Combine coverage
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: test
     steps:
       - uses: actions/checkout@v3
@@ -142,7 +144,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-20.04
+          - ubuntu-22.04
           - windows-2022
         tox_env:
           - dev
@@ -171,7 +173,7 @@ jobs:
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: [check, coverage]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Setup python to build package
         uses: actions/setup-python@v4
