Add GraalPy support
Adds Posix creator for GraalPy and EnsurePipSeeder, which is used as the
default if GraalPy is detected. Using ensurepip is preferred on GraalPy,
because:

* new releases of pip and setuptools tend to break on GraalPy
* GraalPy patches compatibility issues in sources of some well known packages
installed via pip. This is done by monkey patching pip internals and GraalPy
needs predictable pip version for this to work.

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,11 +70,13 @@ virtualenv.create =
     pypy2-win = virtualenv.create.via_global_ref.builtin.pypy.pypy2:Pypy2Windows
     pypy3-posix = virtualenv.create.via_global_ref.builtin.pypy.pypy3:PyPy3Posix
     pypy3-win = virtualenv.create.via_global_ref.builtin.pypy.pypy3:Pypy3Windows
+    graalpy-posix = virtualenv.create.via_global_ref.builtin.graalpy.graalpy:GraalPyPosix
 virtualenv.discovery =
     builtin = virtualenv.discovery.builtin:Builtin
 virtualenv.seed =
     pip = virtualenv.seed.embed.pip_invoke:PipInvoke
     app-data = virtualenv.seed.embed.via_app_data.via_app_data:FromAppData
+    ensurepip = virtualenv.seed.ensurepip.ensurepip:EnsurePipSeeder
 
 [options.extras_require]
 docs =
