--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,11 +12,14 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.38.0
+  rev: v3.1.0
   hooks:
   - id: pyupgrade
     args: ["--py36-plus"]
     exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.38.4
+  hooks:
   - id: pyupgrade
     files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
 - repo: https://github.com/PyCQA/isort
@@ -24,7 +27,7 @@ repos:
   hooks:
   - id: isort
 - repo: https://github.com/psf/black
-  rev: 22.8.0
+  rev: 22.10.0
   hooks:
   - id: black
     args: [--safe]
@@ -43,7 +46,7 @@ repos:
   - id: tox-ini-fmt
     args: ["-p", "fix_lint"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v2.0.0
+  rev: v2.2.0
   hooks:
   - id: setup-cfg-fmt
     args: [--min-py3-version, "3.6  ", "--max-py-version", "3.10"]
