--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,11 +12,14 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.38.0
+  rev: v3.1.0
   hooks:
   - id: pyupgrade
     args: ["--py36-plus"]
     exclude: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
+- repo: https://github.com/asottile/pyupgrade
+  rev: v2.38.4
+  hooks:
   - id: pyupgrade
     files: "^(src/virtualenv/create/via_global_ref/_virtualenv.py|src/virtualenv/create/via_global_ref/builtin/python2/site.py|src/virtualenv/discovery/py_info.py|tasks/__main__zipapp.py)$"
 - repo: https://github.com/PyCQA/isort
@@ -24,7 +27,7 @@ repos:
   hooks:
   - id: isort
 - repo: https://github.com/psf/black
-  rev: 22.8.0
+  rev: 22.10.0
   hooks:
   - id: black
     args: [--safe]
@@ -32,7 +35,7 @@ repos:
   rev: v1.12.1
   hooks:
   - id: blacken-docs
-    additional_dependencies: [black==22.6]
+    additional_dependencies: [black==22.10]
 - repo: https://github.com/pre-commit/pygrep-hooks
   rev: v1.9.0
   hooks:
@@ -43,7 +46,7 @@ repos:
   - id: tox-ini-fmt
     args: ["-p", "fix_lint"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v2.0.0
+  rev: v2.2.0
   hooks:
   - id: setup-cfg-fmt
     args: [--min-py3-version, "3.6  ", "--max-py-version", "3.10"]
@@ -52,10 +55,10 @@ repos:
   hooks:
   - id: flake8
     additional_dependencies:
-      - flake8-bugbear==22.7.1
+      - flake8-bugbear==22.10.25
       - flake8-comprehensions==3.10
       - flake8-pytest-style==1.6
       - flake8-spellcheck==0.28
-      - flake8-unused-arguments==0.0.11
+      - flake8-unused-arguments==0.0.12
       - flake8-noqa==1.2.9
       - pep8-naming==0.13.2
