--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ commands =
       --junitxml {toxworkdir}/junit.{envname}.xml \
       {posargs:tests --int --timeout 600}
     ls -alR
+    python -m coverage debug data
     python -m coverage combine --debug=pathmap
     python -m coverage report --skip-covered --show-missing
     python -m coverage xml -o {toxworkdir}/coverage.{envname}.xml
